# energy-mix-dashboard

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api_requests/: carbon_intensity_requests.py
api_requests/elexon/: balancing_mechanism.py  bm_prices.py  dto.py
app/: main_energy_mix.py  main_server.py  main_streamlit.py
app/api_requests/: carbon_intensity_requests.py  dto.py
app/data/: gb_regions.json
app/database/: models.py
app/services/: __init__.py  analytics.py  gen_mix_dashboard.py  plots.py  service.py
migrations/: env.py
services/: analytics.py  gen_mix_dashboard.py  plots.py  poster.py
test/: test_elexon_bm_prices_api.py  test_generation_mix_requests.py  test_service_elexon_bm.py  test_utils_datetime_helper.py
test/data/: bm_prices.json  generation_mix.json
utils/: datetime_helper.py
