[tool.poetry]
name = "energy-mix-dashboard"
version = "0.1.0"
description = ""
authors = ["ar1j1tm94"]
license = "apache"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.1.0"
requests = "^2.31.0"
pydantic = "^2.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"