[tool.poetry]
name = "energy-mix-dashboard"
version = "0.1.0"
description = ""
authors = ["ar1j1tm94"]
license = "apache"

[tool.poetry.dependencies]
python = "3.11"
pandas = "^2.1.0"
requests = "^2.31.0"
pydantic = "^2.3.0"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
Pillow = "^10.0.1"
plotly = "^5.17.0"
kaleido = "0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"